--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,19 @@ body {
 	font-family: verdana;
 	margin-left: auto;
 	margin-right: auto;
+	background-color: #F4F4F4;
 }
-
+h1 {
+	font-family: calibri;
+	font-size: 18px;
+	color: #4A708B;
+}
+li {
+   	list-style-type: none;
+}
+a {
+   	text-decoration: none;
+}
 .header {
 	position: relative;
     left: 0;
@@ -24,7 +35,7 @@ body {
     margin: auto auto;
     margin-top: 0;
     padding:10px;
-    background-color: #F4F4F4;
+	background-color: white;
 	z-index: 1;
 	overflow: hidden;
 }
@@ -47,7 +58,7 @@ body {
 	width: 400px;
 }
 
-div#products  {
+div#content  {
 	width: 800px;
 	font-size: 150%;
 	float: right;
@@ -67,6 +78,9 @@ div#cart {
 	padding-right: 50px;
 }
 
-div.product {
-	margin-bottom: 15px;
+ul.products li {
+    width: 200px;
+    display: inline-block;
+	vertical-align: top;
+	text-align: center;
 }
