--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,8 @@ body {
 	background-color: #F4F4F4;
 }
 h1 {
+	padding-left: 8px;
+	padding-bottom: 4px;
 	font-family: calibri;
 	font-size: 18px;
 	color: #4A708B;
@@ -12,9 +14,7 @@ h1 {
 li {
    	list-style-type: none;
 }
-a {
-   	text-decoration: none;
-}
+
 .header {
 	position: relative;
     left: 0;
@@ -26,6 +26,18 @@ a {
     background-color: #4A708B;
     border-bottom: #008080;
 	z-index: 50;
+}
+
+.headerft {
+    position: relative;
+    left: 0;
+    top: 0;
+    padding: 0;
+    width: 100%;
+    min-width: 1020px;
+    height: 25px;
+    background-color: #E0E0E0;
+    border-bottom: #008080;
 }
 
 .main {
@@ -58,18 +70,51 @@ a {
 	width: 400px;
 }
 
+/* Products page styling */
+
 div#content  {
 	width: 800px;
 	font-size: 150%;
 	float: right;
 }
 
-dic#side {
-	width: 100px;
+/* Products page side menu styling */
+
+div#side {
+	width: 200px;
 	float: left;
 	padding-right: 20px;
 	padding-top: 0px;
 }
+
+div#side ul {
+    padding: 4px;
+    margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: #FFF;
+    list-style: none;
+    text-indent: 15px;
+    background: #4A708B;
+}
+div#side ul li {
+    background: white;
+    line-height: 30px;
+    border-bottom: 1px solid #4A708B;
+}
+div#side ul li a{
+    text-decoration: none;
+    color: #4A708B;
+    display: block;
+}
+div#side ul li a:hover {
+    background: #3ea5ea;
+}
+div#side ul li#active {
+    background: #3ea5ea;
+}
+
+/* Shopping cart styling */
 
 div#cart {
 	width: 200px;
@@ -78,9 +123,16 @@ div#cart {
 	padding-right: 50px;
 }
 
+/* Main products content styling */
+
 ul.products li {
     width: 200px;
     display: inline-block;
+	padding-top: 10px;
 	vertical-align: top;
 	text-align: center;
+}
+
+ul.products a {
+	text-decoration: none;
 }
