--- a/styles/style.css
+++ b/styles/style.css
@@ -70,8 +70,10 @@ li {
 	width: 400px;
 }
 
+/* Product details page styling */
+
 div#details td {
-	font-size: 9px;
+	font-size: 11px;
 }
 
 /* Products page styling */
@@ -84,38 +86,130 @@ div#content  {
 
 /* Products page side menu styling */
 
-div#side {
-	width: 200px;
-	float: left;
-	padding-right: 20px;
-	padding-top: 0px;
+div#side_cat > ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	vertical-align: baseline;
+	line-height: 1;
 }
 
-div#side ul {
-    padding: 4px;
-    margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    color: #FFF;
-    list-style: none;
-    text-indent: 15px;
-    background: #4A708B;
+div#side_cat > ul {
+	display: block;
+	position: relative;
+	width: 200px;
 }
-div#side ul li {
-    background: white;
-    line-height: 30px;
-    border-bottom: 1px solid #4A708B;
+
+div#side_cat > ul li {
+	display: block;
+	position: relative;
+	margin: 0;
+	padding: 0;
+	width: 100%;
 }
-div#side ul li a{
-    text-decoration: none;
-    color: #4A708B;
-    display: block;
+
+div#side_cat > ul li a {
+	/* Layout */
+	display: block;
+	position: relative;
+	margin: 0;
+	border-top: 1px dotted #fff;
+	border-bottom: 1px dotted #d9d9d9;
+	padding: 11px 20px;
+	/* Typography */
+	font-family: Helvetica, Arial, sans-serif;
+	color: #4A708B;
+	text-decoration: none;
+	text-transform: uppercase;
+	text-shadow: 0 1px 0 #fff;
+	font-size: 13px;
+	font-weight: 300;
+	/* Background & effects */
+	background: #FFFAFA;
 }
-div#side ul li a:hover {
-    background: #3ea5ea;
+/* Rounded corners for the first link of the menu/submenus */
+div#side_cat > ul li:first-child > a {
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+	border-top: 0;
 }
-div#side ul li#active {
-    background: #3ea5ea;
+/* Rounded corners for the last link of the menu/submenus */
+div#side_cat > ul li:last-child > a {
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	border-bottom: 0;
+}
+/* The hover state of the menu/submenu links */
+div#side_cat > ul li a:hover,
+div#side_cat > ul li:hover > a {
+	color: #ffffff;
+	text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+	background: #B9D3EE;
+	background: -webkit-linear-gradient(#B9D3EE, #B9D3EE);
+	background: -moz-linear-gradient(#B9D3EE, #B9D3EE);
+	background: linear-gradient(#B9D3EE, #B9D3EE);
+	border-color: transparent;
+}
+/* The arrow indicating a submenu */
+div#side_cat > ul .has-sub > a::after {
+	content: '';
+	position: absolute;
+	top: 16px;
+	right: 10px;
+	width: 0px;
+	height: 0px;
+	/* Creating the arrow using borders */
+
+	border: 4px solid transparent;
+	border-left: 4px solid #4A708B;
+}
+/* The same arrow, but with a darker color, to create the shadow effect */
+div#side_cat > ul .has-sub > a::before {
+	content: '';
+	position: absolute;
+	top: 17px;
+	right: 10px;
+	width: 0px;
+	height: 0px;
+	/* Creating the arrow using borders */
+
+	border: 4px solid transparent;
+	border-left: 4px solid #fff;
+}
+/* Changing the color of the arrow on hover */
+div#side_cat > ul li > a:hover::after,
+div#side_cat > ul li:hover > a::after {
+	border-left: 4px solid #fff;
+}
+div#side_cat > ul li > a:hover::before,
+div#side_cat > ul li:hover > a::before {
+	border-left: 4px solid rgba(0, 0, 0, 0.25);
+}
+/* THE SUBMENUS */
+div#side_cat > ul ul {
+	position: absolute;
+	left: 100%;
+	top: -9999px;
+	padding-left: 5px;
+	opacity: 0;
+	width: 150px;
+	/* The fade effect, created using an opacity transition */
+	-webkit-transition: opacity 0.3s ease-in;
+	-moz-transition: opacity 0.3s ease-in;
+	transition: opacity 0.3s ease-in;
+}
+div#side_cat > ul ul li a {
+	font-size: 12px;
+}
+/* Showing the submenu when the user is hovering the parent link */
+div#side_cat > ul li:hover > ul {
+	top: 0px;
+	opacity: 1;
+	z-index: 1;
+}
+
+div#side_search  {
+	margin: 3px; 
 }
 
 /* Side shopping cart styling */
