--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,10 @@
 body {
-	font-family: verdana;
+	font-family: Helvetica, Arial, sans-serif;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: #F4F4F4;
 }
+
 h1 {
 	padding-left: 8px;
 	padding-bottom: 4px;
@@ -11,9 +12,12 @@ h1 {
 	font-size: 18px;
 	color: #4A708B;
 }
+
 li {
    	list-style-type: none;
 }
+
+/* Main page layout styling */
 
 .header {
 	position: relative;
@@ -63,7 +67,6 @@ li {
     background-color: #4A708B;
     border-bottom: #008080;
 }
-
 
 .form {
    	background-color: #3498db;
@@ -127,19 +130,19 @@ div#side_cat > ul li a {
 	/* Background & effects */
 	background: #FFFAFA;
 }
-/* Rounded corners for the first link of the menu/submenus */
+
 div#side_cat > ul li:first-child > a {
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 	border-top: 0;
 }
-/* Rounded corners for the last link of the menu/submenus */
+
 div#side_cat > ul li:last-child > a {
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 	border-bottom: 0;
 }
-/* The hover state of the menu/submenu links */
+
 div#side_cat > ul li a:hover,
 div#side_cat > ul li:hover > a {
 	color: #ffffff;
@@ -150,7 +153,7 @@ div#side_cat > ul li:hover > a {
 	background: linear-gradient(#B9D3EE, #B9D3EE);
 	border-color: transparent;
 }
-/* The arrow indicating a submenu */
+
 div#side_cat > ul .has-sub > a::after {
 	content: '';
 	position: absolute;
@@ -158,12 +161,11 @@ div#side_cat > ul .has-sub > a::after {
 	right: 10px;
 	width: 0px;
 	height: 0px;
-	/* Creating the arrow using borders */
 
 	border: 4px solid transparent;
 	border-left: 4px solid #4A708B;
 }
-/* The same arrow, but with a darker color, to create the shadow effect */
+
 div#side_cat > ul .has-sub > a::before {
 	content: '';
 	position: absolute;
@@ -171,12 +173,11 @@ div#side_cat > ul .has-sub > a::before {
 	right: 10px;
 	width: 0px;
 	height: 0px;
-	/* Creating the arrow using borders */
 
 	border: 4px solid transparent;
 	border-left: 4px solid #fff;
 }
-/* Changing the color of the arrow on hover */
+
 div#side_cat > ul li > a:hover::after,
 div#side_cat > ul li:hover > a::after {
 	border-left: 4px solid #fff;
@@ -185,7 +186,7 @@ div#side_cat > ul li > a:hover::before,
 div#side_cat > ul li:hover > a::before {
 	border-left: 4px solid rgba(0, 0, 0, 0.25);
 }
-/* THE SUBMENUS */
+
 div#side_cat > ul ul {
 	position: absolute;
 	left: 100%;
@@ -193,7 +194,7 @@ div#side_cat > ul ul {
 	padding-left: 5px;
 	opacity: 0;
 	width: 150px;
-	/* The fade effect, created using an opacity transition */
+
 	-webkit-transition: opacity 0.3s ease-in;
 	-moz-transition: opacity 0.3s ease-in;
 	transition: opacity 0.3s ease-in;
@@ -201,7 +202,7 @@ div#side_cat > ul ul {
 div#side_cat > ul ul li a {
 	font-size: 12px;
 }
-/* Showing the submenu when the user is hovering the parent link */
+
 div#side_cat > ul li:hover > ul {
 	top: 0px;
 	opacity: 1;
@@ -224,10 +225,10 @@ div#cart {
 /* Shopping cart page styling */
 
 div#cartpage table {
-	width: 750px;
+	width: 100%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
-	background-color: F3F0E9;
+	background-color: E0E0E0;
 	border-radius: 5px;
 	box-shadow: 1px 1px 3px #666;
 }
@@ -241,6 +242,34 @@ div#cartpage td {
 div#cartpage td {
 	background-color: #F9F9F4;
 	color : #333;
+}
+
+/* Order page styling */
+
+div#orderpage table {
+	width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+	background-color: E0E0E0;
+	border-radius: 5px;
+	box-shadow: 1px 1px 3px #666;
+}
+
+div#orderpage td {
+	height: 35px;
+	background-color: white;
+	font-weight: normal;
+	color:#333;
+}
+
+div#orderpage td {
+	background-color: #F9F9F4;
+	color : #333;
+}
+
+div#orderpage p {
+	font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
 }
 
 /* Main products content styling */
