--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ li {
     width: 100%;
     min-width: 1020px;
     height: 80px;
-    background-color: #4A708B;
+    background-color: #FFFFFF;
     border-bottom: #008080;
 	z-index: 50;
 }
@@ -61,7 +61,7 @@ li {
 
 .footer {
     position: relative;
-    width: 1020px;
+    width: 1040px;
     min-width: 600px;
     color: #ffffff;
 	margin: auto auto;
